...
            )
        },
        actions = {
            IconButton(onClick = { } , modifier = Modifier.testTag("notifications_button")) {
                Icon(Icons.Filled.Notifications, contentDescription = "Notifications")
            }
            IconButton(onClick = onApptsClick, modifier = Modifier.testTag("appointments_button")) {
                Icon(Icons.Filled.CalendarMonth, contentDescription = "Calendar")
            }
        }
    )
}
