...
        Scaffold(
            floatingActionButton = {
                CircularButton(
                    onClick = onBookAppt,
                    modifier = Modifier
                        .padding(16.dp),
                    testTag = "choose_therapist_button"
                )
            },

            topBar = {
                MainTopBar(
                    text = stringResource(R.string.app_name),
...
